# example-wandb-trainer

./: .gitignore  README.md  pyproject.toml
example_wandb_trainer/: main.py
