[tool.poetry]
name = "example_wandb_trainer"
version = "0.1.0"
description = ""
authors = ["Alvin Prayuda <alvinprayuda@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wandb = "^0.12.11"
example-dvc-dataset = {git = "https://github.com/alphinside/example-dvc-dataset.git", rev = "main"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
